--- a/index.html
+++ b/index.html
@@ -3,18 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Css Basic Examples</title>
+    <title>Complete grid module</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
-        CSS Box Model Property
- </div>
- <div class="text">
-    <div class="text1">
-        Hemant Raju Gowardipe
+        <h1>Column Gap Property</h1>
+    <p>The colum gap property define the gap between Row and Column.</p>
+    <div class="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod impedit, incidunt voluptatibus voluptatem repudiandae laudantium nemo earum voluptate, quibusdam recusandae quaerat sit deserunt assumenda sed neque distinctio! Iste, nesciunt dolorem?Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque tempora corporis id quas harum! Nulla minima iste aut provident quo ex quos laborum ratione fugit aliquid magnam totam, explicabo fuga?
     </div>
- </div>
-    
+        <h1>Gap Property</h1>
+            <div class="row">
+                <div class="col">
+                     Hemant
+                </div>
+                <div class="col">
+                    Raju
+                </div>
+                <div class="col">
+                     Gowardipe
+                </div>
+            </div>
+
+        <h1>Grid Property</h1>
+            <div class="main">
+                <div class="text2">1</div>
+                <div class="text2">2</div>
+                <div class="text2">3</div>
+                <div class="text2">4</div>
+                <div class="text2">5</div>
+                <div class="text2">6</div>
+            </div>
+ 
 </body>
 </html>
