--- a/html tutorial/web5.html
+++ b/html tutorial/web5.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> HTML 5 Tags</title>
-	<!-- doesnot show on web page only for understanding of browser -->
+	<!-- meta tag doesnot show on web page it's  only for understanding of browser -->
 	<meta charset="utf-8">
 	<meta content="author" name="Hemant Gowardipe"> 
 	<meta content="description" name="Hello this website contains all information regarding student of KDK">
